--- a/css/layout.css
+++ b/css/layout.css
@@ -13,14 +13,15 @@ a:hover{text-decoration: none; color: #333;}
 #wrap{width: 100%;}
     #header{z-index: 40; position: relative; width: 100%; height: 70px;}
         .header_wrap{position: absolute; left: 0; top: 0; width: 100%; height: 70px; background-color: #f3f3f3;}
-            .header_inner{position: relative; width: 100%; height: 70px; background-color: #fff; /*border-bottom: 1px solid #ccc;*/}
+            .header_inner{position: relative; width: 100%; height: 70px; background-color: #fff;}
     .main_visual{z-index: 30; position: relative; width: 100%;}
     #container{width: 100%;}
         /* main */
-        .content1{width: 1142px; margin: 0 auto 80px; padding: 90px 0 120px; /*background-color: yellow;*/}
-        .content2{width: 1142px; margin: 0 auto 128px; padding: 69px 95px 61px; background-color: #fff;}
+        .content1{ padding: 120px 0 120px; position: relative;}
+        .content1::after{content: ""; display: block; clear: both;}
+        .content2{width: 1142px; margin: 120px auto 180px;}
         .content2::after{content: ""; display: block; clear: both;}
-        .content3{width: 1142px; margin: 0 auto 122px; /* background-color: aqua; */}
+        .content3{width: 100%; margin: 0; background: #111; height: 860px; display: flex; justify-content: space-between;}
         .content3::after{content: ""; display: block; clear: both;}
 
         /* sub */
