--- a/css/main.css
+++ b/css/main.css
@@ -25,11 +25,14 @@ a.btn_next{right: 30px; background-position: -30px 0;}
 .slide_roll>a.btn_play.on{background-position: -9px 0;}
 
 /* container */
-#container{width: 100%;}
+#container{width: 100%; position: relative;}
+#container::after{content: ""; display: block; width: 100%; height: 380px;
+    position: absolute; top: 0; background: #f4f6fb; z-index: -1;}
+
+.section{transform: translateY(50px); opacity: 0; transition: all 0.6s ease-in-out 0s;}
+.section.on{transform: translateY(0); opacity: 1;}
 
 /* content1 */
-.content1::before{z-index: -1; content: ""; display: block; width: 100%; height: 380px; 
-    position: absolute; top: 0; background:#f4f6fb;}
 .content1>h2{font-size: 38px; font-weight: bold; text-align: center; margin-bottom: 70px; line-height: 1;}
 .content1>ul.news_list{width: 1200px; margin: 0 auto 80px; display: flex; justify-content: space-between;
     height: 341px;}
